Enable scrolling to view additional search results.

--- a/front/src/app/component/search-input/search-input.component.html
+++ b/front/src/app/component/search-input/search-input.component.html
@@ -10,15 +10,13 @@
         }
     </div>
 
-    <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list">
+    <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list overflow-y-auto" style="max-height: 300px">
       <ul *ngIf="resultsLength > 0">
-        <li *ngFor="let result of searchResults$ | async" class="dropdown-item"  (click)="onSelect(result.id)">
-
+        <li *ngFor="let result of displayedResults" class="dropdown-item" (click)="onSelect(result.id)">
             <img [src]="result.image" alt="{{ result.name }}" />
             <p>{{ result.name }}</p>
             <!-- <p>{{ result.ingerdiants.name }}</p> -->
         </li>
         </ul>
-
     </div>
 </div>
