mplement navigation for the links.

--- a/front/src/app/component/footer/footer.component.html
+++ b/front/src/app/component/footer/footer.component.html
@@ -22,28 +22,8 @@
                     <div class="footer-menu-wrap mt-2">
                         <ul id="menu-footer-1" class="menu menu--footer">
                             <li id="menu-item-70689" class="menu-item">
-                                <a href="#">
+                                <a routerLink="/recipes">
                                     <span>Recipes</span>
-                                </a>
-                            </li>
-                            <li id="menu-item-70690" class="menu-item">
-                                <a href="#">
-                                    <span>How-To</span>
-                                </a>
-                            </li>
-                            <li id="menu-item-70691" class="menu-item">
-                                <a href="#">
-                                    <span>Kitchen Basics</span>
-                                </a>
-                            </li>
-                            <li id="menu-item-70692" class="menu-item">
-                                <a href="#">
-                                    <span>Pantry Staples</span>
-                                </a>
-                            </li>
-                            <li id="menu-item-70693" class="menu-item">
-                                <a href="#">
-                                    <span>Extra Bytes</span>
                                 </a>
                             </li>
                         </ul>
@@ -57,18 +37,8 @@
                     <div class="footer-menu-wrap mt-2">
                         <ul id="menu-footer-1" class="menu menu--footer">
                             <li id="menu-item-70689" class="menu-item">
-                                <a href="#">
+                                <a routerLink="/about">
                                     <span>About</span>
-                                </a>
-                            </li>
-                            <li id="menu-item-70690" class="menu-item">
-                                <a href="#">
-                                    <span>FAQ</span>
-                                </a>
-                            </li>
-                            <li id="menu-item-70691" class="menu-item">
-                                <a href="#">
-                                    <span>Contact</span>
                                 </a>
                             </li>
                         </ul>
@@ -86,16 +56,16 @@
                 </div>
 
                 <div class="col-lg-4 col-md-5 footer-social mt-4">
-					<a href="#">
+					<a href="https://www.facebook.com/">
 						<i class="fa-brands fa-facebook-f"></i>
 					</a>
-					<a href="#">
+					<a href="https://www.instagram.com/">
 						<i class="fa-brands fa-instagram"></i>
 					</a>
-					<a href="#">
+					<a href="https://www.dribble.com/">
 						<i class="fa-brands fa-dribbble"></i>
 					</a>
-					<a href="#">
+					<a href="https://www.behance.net/">
 						<i class="fa-brands fa-behance"></i>
 					</a>
 				</div>
