--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -80,14 +80,15 @@
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
-            @for (latestRecipe of recipesArr?.slice(0, 4); track $index ) {
+            @for (latestRecipe of findRecipes?.slice(0, 4); track $index ) {
                 <div class="col-lg-3 col-md-6 col-sm-12">
-                    <div class="latestContent">
-                        <a >
+                    <div class="latestContent" style="cursor: pointer;">
+                        <a routerLink="/recipes/{{latestRecipe.id}}">
                             <img class="img-fluid rounded-3 object-fit-cover w-100" [src]="latestRecipe.image" alt="" style="height:330px;">
                             <div class="mt-3">
                                 <h5>{{latestRecipe.name}}</h5>
                                 <p>{{latestRecipe.category.name}}</p>
+                                <p>{{latestRecipe.user.role}}</p>
                             </div>
                         </a>
                     </div>
@@ -124,12 +125,13 @@
             @for (recipe of randomRecipesArr; track $index ) {
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="latestContent">
-                        <a href="">
+                        <a routerLink="/recipes/{{recipe.id}}">
                             <img class="img-fluid rounded-3 object-fit-cover w-100" [src]="recipe.image" alt="" style="height: 330px;">
                             <div class="mt-3">
                                 <!-- <p>{{recipe.id}}</p> -->
                                 <h5>{{recipe.name}}</h5>
                                 <p>{{recipe.category.name}}</p>
+                                <p>{{recipe.user.role}}</p>
                             </div>
                         </a>
                     </div>
