--- a/front/src/app/component/footer/footer.component.css
+++ b/front/src/app/component/footer/footer.component.css
@@ -47,7 +47,7 @@
 
 .footer-bottom .footer-social a {
     font-size: 18px;
-    color: #eee;
+    color: #f9f4f4;
     margin-left: 10px;
     background: #395963;
     height: 40px;
