--- a/front/src/app/component/search-input/search-input.component.html
+++ b/front/src/app/component/search-input/search-input.component.html
@@ -1,5 +1,5 @@
 
-<div class="search-container">
+<div class="search-container d-flex align-self-bottom">
     <div class="search-bar">
         <i class="fa-solid fa-magnifying-glass search"></i>
         <input class="form-control" type="text" placeholder="Search for recipes..." aria-label="Search"
