--- a/front/src/app/component/about/about.component.css
+++ b/front/src/app/component/about/about.component.css
@@ -4,14 +4,13 @@
   max-width: 1200px;
   margin: auto;
   padding: 20px;
-  
 }
 
 .team-member {
   display: flex;
   align-items: center;
   color: white;
-  
+
   padding: 20px;
   border: none; /* Remove borders */
   box-shadow: none; /* Remove shadows */
@@ -28,14 +27,14 @@
 }
 
 .member-info h3 {
-  text-align:left;
+  text-align: left;
   margin: 0;
   font-size: 20px;
   color: var(--main-color);
 }
 
 .member-info h4 {
-  text-align:left;
+  text-align: left;
   margin: 0;
   color: var(--second-color);
   font-size: 16px;
@@ -45,4 +44,31 @@
   text-align: left;
   font-size: 14px;
   color: black;
+}
+
+@media (orientation: landscape) {
+  .img-orientation {
+    transform: rotate(0deg);
+    width: 25%;
+    img {
+      width: 100%;
+    }
+  }
+}
+
+@media (orientation: portrait) {
+  .img-orientation {
+    transform: rotate(90deg);
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    margin-left: 13%;
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.flip {
+  transform: rotate(90deg);
 }
