--- a/front/src/app/component/footer/footer.component.html
+++ b/front/src/app/component/footer/footer.component.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
 
-            <div class="menus col-lg-6">
+            <div class="menus col-lg-3">
                 <!-- Recipes Menu -->
                 <div class="menu-column ">
                     <h1 class="heading">Recipes</h1>
@@ -49,7 +49,8 @@
                         </ul>
                     </div>
                 </div>
-    
+            </div>
+            <div class="menus col-lg-3">
                 <!-- About Menu -->
                 <div class="menu-column ">
                     <h1 class="heading">About</h1>
