--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -84,7 +84,7 @@
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
-            @for (latestRecipe of recipesArr.slice(0, 4); track $index ) {
+            @for (latestRecipe of (recipesArr && recipesArr.length >= 4)? recipesArr.slice(0, 4) : recipesArr; track $index ) {
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="latestContent">
                         <a href="">
