--- a/front/src/app/component/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin-add-recipe/admin-add-recipe.component.html
@@ -1,7 +1,7 @@
 <div class="container my-5">
-    <form [formGroup]="recipeForm" class="row" (submit)="onSubmission('recipesuccess')">
+    <form enctype="multipart/form-data" [formGroup]="recipeForm" class="row" (submit)="onSubmission('recipesuccess')">
       <h1 class="h3 text-center fw-bold text-uppercase mb-4 col-12">
-        add a new recipe
+        add a new recipe boss
       </h1>
       <div class="mb-3 col-12">
         <label for="name-field" class="text-capitalize mb-2">name:</label>
@@ -40,7 +40,7 @@
       <div class="mb-3 col-6">
         <label for="serving-field" class="text-capitalize mb-2">Time:</label>
         <input
-          type="text"
+          type="number"
           class="form-control"
           id="time-field"
           placeholder="Enter time in minutes"
@@ -96,11 +96,11 @@
       <div class="mb-3">
         <label for="image-field" class="text-capitalize mb-2">image:</label>
         <input
-          type="text"
+          type="file"
           class="form-control"
           id="image-field"
-          placeholder="image"
           formControlName="image"
+          (change)="onFileSelected($event)"
         />
         @if(recipeForm.controls['image'].invalid &&
         recipeForm.controls['image'].touched){
