--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-xl">
   <div class="container-fluid">
-    <div class="row w-100 align-items-center">
+    <div class="row w-100 align-items-center justify-content-between">
       
       <!-- Logo Section -->
       <div class="col-4 col-sm-4 col-md-3 col-lg-3">
