add navigation to admin page

--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
@@ -235,7 +235,7 @@
           add
         </button>
         <a
-          routerLink="/profile/{{ userId }}"
+          routerLink="/admin"
           class="btn btn-outline-dark fw-bold text-capitalize mt-4 ms-4 px-4 py-2"
           >cancel</a
         >
