--- a/front/src/app/component/profile/add-recipe/add-recipe.component.html
+++ b/front/src/app/component/profile/add-recipe/add-recipe.component.html
@@ -235,7 +235,7 @@
         add
       </button>
       <a
-        routerLink="/profile/{{ userId }}"
+        routerLink="/profile"
         class="btn btn-outline-dark fw-bold text-capitalize mt-4 ms-4 px-4 py-2"
         >cancel</a
       >
@@ -246,7 +246,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-body">
-             <div class="text-center mb-4">
+            <div class="text-center mb-4">
               <i class="far fa-check-circle check-icon" style="color: var(--btn-color); font-size: 50px;"></i>
             </div>
             <div>
