--- a/front/src/app/component/admin/admin-edit-pending-recipes/admin-edit-pending-recipes.component.css
+++ b/front/src/app/component/admin/admin-edit-pending-recipes/admin-edit-pending-recipes.component.css
@@ -22,6 +22,15 @@ h1, form label{
 .main .back p{
     margin: 0;
 }
+.main p,.main i{
+    transition: all 0.3s;
+}
+.main:hover i{
+    transform: translateX(5px);
+}
+.main:hover p{
+    transform: translateX(-5px);
+}
 
 @media (max-width: 1200px) {
     .col-lg-4,
