--- a/front/src/app/component/admin/admin-user/admin-user.component.html
+++ b/front/src/app/component/admin/admin-user/admin-user.component.html
@@ -22,7 +22,7 @@
             <td>{{ data.name }}</td>
             <td>{{ data.email }}</td>
             <td>{{ data.role }}</td>
-            <td class="text-center" (click)="routeToEdit(data.id)">
+            <td class="text-center" (click)="routeToEdit(data.id)" style="cursor: pointer;">
                 <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);" ></i>
             </td>
 
