--- a/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
+++ b/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
@@ -3,7 +3,7 @@
     <ng-template pTemplate="caption">
         <div class="fs-3 dataName">
             <h1>Recipes</h1>
-            <div routerLink="/admin-add-recipes/{{admin.id}}">
+            <div routerLink="/admin-add-recipes/{{admin.id}}" style="cursor: pointer;">
                 <i class="fa-solid fa-plus"></i>
             </div>
         </div>
@@ -28,7 +28,7 @@
             <td>{{ data.user.name }}</td>
             
             <!-- Edit Button -->
-            <td class="text-center" (click)="editRecipe(data.id)">
+            <td class="text-center" (click)="editRecipe(data.id)" style="cursor: pointer;">
                 <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
             </td>
             
