--- a/front/src/app/component/admin/admin.component.html
+++ b/front/src/app/component/admin/admin.component.html
@@ -1,5 +1,5 @@
 
-<div class="container position-relative mt-5 p-2">
+<div class="container position-relative mt-5 p-2" style="height: 50vh;">
     <div class="row mb-5">
         <div class="col-md-4 col-12 text-center">
             <div class="sidebar p-3">
