--- a/front/src/app/component/payment/payment.component.html
+++ b/front/src/app/component/payment/payment.component.html
@@ -1,4 +1,4 @@
-<div class="container my-5 d-flex flex-column align-items-center">
+<div class="container my-5 d-flex flex-column align-items-center" style="height: 55vh;">
   <h1 class="text-center text-uppercase fw-bold title">lets get premium!!</h1>
   <div class="content-wrapper my-3 d-flex gap-4 justify-content-center">
     <div class="premium-section py-4 px-5 bg-warning-subtle rounded">
@@ -16,7 +16,7 @@
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">leave a comment</span>
         </li>
         <li class="mb-2">
-          <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">share your socials</span>
+          <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">Access Premium Recipes</span>
         </li>
         <li class="">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">share your magical recipies</span>
@@ -38,7 +38,7 @@
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">leave a comment</span>
         </li>
         <li class="mb-2">
-          <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">share your socials</span>
+          <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">Access Premium Recipes</span>
         </li>
         <li class="">
           <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">share your magical recipies</span>
