--- a/front/src/app/component/forgot-password-components/reset-password/reset-password.component.css
+++ b/front/src/app/component/forgot-password-components/reset-password/reset-password.component.css
@@ -27,3 +27,12 @@
 .check-icon {
     animation: bounce 1s ease infinite;
 }
+
+.showIcon {
+  position: absolute;
+  right: 15px;
+  bottom: -10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 20px;
+}
