--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -1,15 +1,11 @@
 /* Navbar styles */
-.logo img {
-  height: 80px !important;
-  width: 100px !important;
-}
 
 .navbar {
-  padding: 20px 70px;
-  background-color: var(--primary-background-color);
-  color: var(--primary-text-color);
-  background-color: #32373d;
   padding: 0 70px;
+  /* background-color: #32373d; */
+  /* color: var(--main-color); */
+  font-size: 18px;
+
 }
 .logo{
   cursor: pointer;
@@ -17,6 +13,7 @@
 .logo img{
   width: 40%;
 }
+
 /* Search */
 li{
   cursor: pointer;
@@ -54,8 +51,9 @@ li{
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--primary-text-color);
-
+  font-size: 18px;
+  color: var(--main-color);
+  /* color: var(--primary-text-color); */
 }
 
 .nav-links i {
@@ -72,7 +70,7 @@ li{
 
 .links .navbar-nav .nav-item a:hover,
 .links .navbar-nav .nav-item a.active {
-  color: var(--btn-color);
+  color: var(--btn-color) !important;
 }
 
 .links a p{
