--- a/front/src/app/component/search-input/search-input.component.css
+++ b/front/src/app/component/search-input/search-input.component.css
@@ -5,9 +5,6 @@
     align-items: center; /* Center the search bar vertically */
 }
 
-.search-bar {
-    width: 500px !important;
-}
 
 .search-bar input {
     width: 100%; 
@@ -52,7 +49,7 @@ input::placeholder {
 
 .search-container .dropdown-list {
     position: absolute;
-    top: 45px;
+    top: 98%;
     left: 0;
     width: 100%;
     background-color: var(--third-color);
