--- a/front/src/app/component/search-input/search-input.component.html
+++ b/front/src/app/component/search-input/search-input.component.html
@@ -1,8 +1,8 @@
 
 <div class="search-container d-flex align-self-bottom">
-    <div class="search-bar">
+    <div class="search-bar w-100">
         <i class="fa-solid fa-magnifying-glass search"></i>
-        <input class="form-control" type="text" placeholder="Search for recipes..." aria-label="Search"
+        <input class="form-control w-100" type="text" placeholder="Search for recipes..." aria-label="Search"
             [(ngModel)]="searchQuery" (input)="search(searchQuery)"
         >
         @if(searchQuery){
@@ -10,7 +10,7 @@
         }
     </div>
 
-    <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list overflow-y-auto" style="max-height: 300px">
+    <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list overflow-y-auto w-100" style="max-height: 300px;">
       <ul *ngIf="resultsLength > 0">
         <li *ngFor="let result of displayedResults" class="dropdown-item" (click)="onSelect(result.id)">
             <img [src]="result.image" alt="{{ result.name }}" />
