--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -134,16 +134,21 @@
           style="width: 300px; cursor: pointer"
           (click)="onRecipeClick(recipe.id)"
         >
-          <img
-            class="rounded card-img-top w-100 object-fit-cover"
-            src="{{ recipe?.image }}"
-            alt="Title"
-            style="height: 330px"
-          />
+          <div class="image-wrapper overflow-hidden rounded">
+            <img
+              class="rounded card-img-top w-100 object-fit-cover"
+              src="{{ recipe?.image }}"
+              alt="Title"
+              style="height: 330px"
+            />
+          </div>
           <div class="card-body">
-            <div class="time">
-              <span class="h6 me-2"><i class="fa-regular fa-clock"></i></span>
-              <span class="h6">{{ recipe.time }} mins</span>
+            <div class="category-time d-flex align-items-baseline justify-content-between">
+              <span class="h6 related-recipe-category">{{ recipe?.category.name }}</span>
+              <div class="time">
+                <span class="h6 me-2"><i class="fa-regular fa-clock"></i></span>
+                <span class="h6">{{ recipe?.time }} mins</span>
+              </div>
             </div>
             <h4 class="card-title">{{ recipe?.name }}</h4>
           </div>
@@ -155,27 +160,33 @@
   <div class="comments-wrapper mt-5">
     <h3 class="title text-uppercase">comments</h3>
     <div class="body mt-3 border-top ">
-      <form  class="user-comment mt-5 text-start " [formGroup]="commentForm" (ngSubmit)="comment('loginModal')">
+      <form  class="user-comment mt-5 text-start border-bottom pb-5" [formGroup]="commentForm" (ngSubmit)="comment('loginModal')">
         <textarea
         class="form-control"
         name="user-comment-field"
         id="user-comment-field"
-        rows="2"
+        rows="3"
         placeholder="place a comment.."
         formControlName="content"
         ></textarea>
         <button type="submit" class="btn btn-auth mt-3" >Comment</button>
       </form>
       <div class="comments">
-        <div *ngFor="let comment of recipe.comments">
-          <div class="comment p-5 border-bottom ">
-            <i class="fa-solid fa-quote-left" 
-              style="font-size: 13px; position: relative; top: -8px;">
-            </i>
-            <span class="mx-1 h3"> {{ comment.content }}</span>
-            <i class="fa-solid fa-quote-right"
-              style="font-size: 13px; position: relative; top: -8px;">
-            </i>
+        <div *ngFor="let comment of recipe.comments" class="comment py-5">
+          <div>
+            <div class="title text-capitalize"><span>{{ comment.user.name }}</span></div>
+            <div class="body">
+              <i class="text-secondary fa-solid fa-quote-left"
+                style="font-size: 13px; position: relative; top: -10px;">
+              </i>
+              <span class="mx-2"> {{ comment.content }}</span>
+              <i class="text-secondary fa-solid fa-quote-right"
+                style="font-size: 13px; position: relative; top: -10px;">
+              </i>
+            </div>
+            <div class="comment-date float-end">
+              <span>{{ comment.created_at | date:"medium" }}</span>
+            </div>
           </div>
         </div>
       </div>
