feature: related recipes now are based on all ingredients not just one, added author name as hyper link for author profile, added condition not to show current recipe in related recipes and not show whole section if there aren't any related recipes

--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -41,6 +41,29 @@ p {
   text-transform: capitalize;
 }
 
+.recipe-author {
+  margin-top: 1rem;
+}
+
+.recipe-author span {
+  font-family: var(--main-font);
+  color: var(--second-color);
+}
+
+.recipe-author a{
+  font-family: var(--second-font);
+  font-size: 18px;
+  font-weight: normal;
+  color: var(--main-color);
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.recipe-author a:hover {
+  color: var(--btn-color);
+  text-decoration: underline;
+}
+
 .recipe-description {
   font-family: var(--second-font);
   color: var(--main-color);
