--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -2,7 +2,10 @@
   <div
     class="title-wrapper d-flex justify-content-between align-items-baseline"
   >
-    <h1 class="recipe-title">{{ recipe?.name }}</h1>
+    <div class="title-author">
+      <h1 class="recipe-title">{{ recipe?.name }}</h1>
+      <div class="recipe-author"><span>made by <i class="fa-solid fa-hand-point-right me-2"></i> </span> <a href="#">{{ recipe?.user.name }}</a> </div>
+    </div>
     <div class="rating-favorite d-flex align-items-baseline gap-3">
       <i
         class="fa-heart favorite"
@@ -125,10 +128,10 @@
     </div>
   </div>
 
-  <div class="related-recipes mt-5">
+  <div class="related-recipes mt-5" *ngIf="ingredient?.recipes !== null">
     <h3 class="title text-uppercase">related recipes</h3>
     <div class="body mt-3 d-flex gap-3 overflow-x-scroll">
-      <div *ngFor="let recipe of ingredient?.recipes">
+      <div *ngFor="let recipe of relatedRecipes">
         <div
           class="card border-0"
           style="width: 300px; cursor: pointer"
@@ -160,7 +163,7 @@
   <div class="comments-wrapper mt-5">
     <h3 class="title text-uppercase">comments</h3>
     <div class="body mt-3 border-top ">
-      <form  class="user-comment mt-5 text-start border-bottom pb-5" [formGroup]="commentForm" (ngSubmit)="comment('loginModal')">
+      <form  class="user-comment mt-5 text-start  pb-5" [formGroup]="commentForm" (ngSubmit)="comment('loginModal')">
         <textarea
         class="form-control"
         name="user-comment-field"
