--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,5 +1,24 @@
+
+@if(selected){
+  <section class="intro pt-2 mt-5">
+    <div class="container p-5">
+      <div class="row text-end">
+        <div class="col-3 introImg ">
+            <img *ngIf="categoryArr[shuffle]" [src]="categoryArr[shuffle].image" alt="">
+        </div>
+        <div class="col-9 text-start introContent">
+            <h1>{{ categoryName }}</h1>
+            <p class="w-100 mt-2">
+              {{ categoryDescription }}
+            </p>
+        </div>
+      </div>
+    </div>
+  </section>
+}
+
 <section class="mt-5">
-    <h1 class="text-center" style="color: var(--main-color);">All Recipes</h1>
+    <h1 class="text-center" style="color: var(--main-color); font-size: 50px;">All Recipes</h1>
 </section>
 <section class="mt-3 mb-3  category">
   <div class="row d-flex justify-content-center align-items-center smaller-div">
@@ -102,7 +121,7 @@
       >
         <div class="imagehover">
           <img class="rounded-image object-fit-cover" style="width: 100% !important; height: 330px !important;" [src]="item.image" alt="food">
-          <span class="badge  position-absolute top-0 start-0 ms-3 mt-2" *ngIf="item.user?.role === 'premium'"><i class="fa-solid fa-crown pb-1" ></i></span>
+          <span class="badge position-absolute top-0 start-0 ms-3 mt-2" *ngIf="item.user?.role === 'premium'"><i class="fa-solid fa-crown pb-1" ></i></span>
         </div>
         <div class="d-flex justify-content-between mt-2">
           <p class="red m-0">{{item.category.name}}</p>
