--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -1,12 +1,17 @@
 /* Navbar styles */
 
 .navbar {
-  padding: 0 70px;
   /* background-color: #32373d; */
   /* color: var(--main-color); */
   font-size: 18px;
-
+  transition: background-color 0.3s ease, padding 0.3s ease;
+  padding: 10px 70px; 
 }
+.navbar.scrolled {
+  background-color: white; 
+  padding: 5px 70px;
+}
+
 .logo{
   cursor: pointer;
 }
