added condition on remove ingredient to fix first ingredient remove bug

--- a/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
+++ b/front/src/app/component/admin/admin-add-recipe/admin-add-recipe.component.html
@@ -213,6 +213,7 @@
               type="button"
               class="btn text-light me-4"
               (click)="removeIngredient(i)"
+              [hidden]="i == 0"
             >
               Remove Ingredient
             </button>
